bat.bool1.nearhundred.NearHundred.scala.error
Compilation error:
NearHundred:2: error: type mismatch;
 found   : Int(90)
 required: Boolean
  return (( 110 >= n >= 90) || (190 >= n))
                        ^